changed few config to resolve loading animation and content overlaping

--- a/src/components/LoadingAnimation/index.css
+++ b/src/components/LoadingAnimation/index.css
@@ -1,5 +1,4 @@
-
-.box{
+.box {
     height: 100vh;
     width: 100%;
     background-color: rgb(7, 7, 20);
@@ -11,47 +10,55 @@
     animation: vanish 0.2s cubic-bezier(0.77, 0, 0.18, 1) 3.3s forwards;
     z-index: 5;
 }
+
 @keyframes vanish {
     0% {
         opacity: 1;
         z-index: 1;
     }
+
     /* 99% {
         opacity: 0;
         left: 0px;
     } */
-    100%{
+    100% {
         opacity: 0;
         z-index: -1;
     }
 }
-.svgclass{
-height: 200px;
-width: 200px;
-animation: shrink 0.3s cubic-bezier(0.77, 0, 0.18, 1) 3s forwards;
+
+.svgclass {
+    height: 200px;
+    width: 200px;
+    animation: shrink 0.3s cubic-bezier(0.77, 0, 0.18, 1) 3s forwards;
 }
+
 @keyframes shrink {
     0% {
         transform: scale(1);
         opacity: 1;
     }
-    100%{
+
+    100% {
         transform: scale(0.1);
-        opacity: 0;
+        opacity: 0.1;
     }
 }
-.text{
+
+.text {
     font-size: 50px;
     font-weight: 500;
     fill: lightblue;
     opacity: 0;
     animation: appear 0.7s cubic-bezier(0.77, 0, 0.18, 1) 1.8s forwards;
-    
+
 }
+
 @keyframes appear {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
